--- a/main.html
+++ b/main.html
@@ -4,7 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
 
 
 	<link rel="stylesheet" href="static/css/main_style.css" type="text/css">
@@ -19,9 +21,39 @@
 <body>
 
 <header class="header">
-	<nav class="navbar navbar-dark bg-dark">
+
+	<nav class="navbar navbar-dark navbar-expand-lg black_bg">
+
+		<div class="container-fluid">
+
+		    <a class="navbar-brand" href="#">
+		    	<img class='logo' src='static/img/logo_letters.svg'>
+		    </a>
+
+		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		      <span class="navbar-toggler-icon"></span>
+		    </button>
+
+
+		    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		      <div class="navbar-nav">
+		      	<div class="d-flex justify-content-around">
+			        <a class="nav-link" aria-current="page" href="#">product</a>
+			        <a class="nav-link" href="#">tariffs</a>
+			        <a class="nav-link" href="#">calculator</a>
+			        <a class="nav-link" href="#">app</a>
+			        <a class="nav-link" href="#">about</a>
+			        <a class="nav-link" href="#">team</a>
+			        <a class="nav-link" href="#">partners</a>
+
+		        </div>
+		      </div>
+		    </div>
+		  </div>
 
 	</nav>
+
+
 </header>
 
 <!-- DESCTOP START -->
@@ -35,7 +67,7 @@
 				<div class='ci_1_b_de'></div>
 			</div>
 		</section>
-
+<div class="glass"><h2>Product</h2></div>
 		<section class ='green_bg'>
 		</section>
 
@@ -74,5 +106,8 @@
 	
 </footer>
 
+
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
