--- a/main.html
+++ b/main.html
@@ -77,6 +77,13 @@
 			</div>
 		</section>
 <div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
 		<section class ='green_bg'>
 		</section>
 
@@ -155,13 +162,70 @@
 		</section>
 
 
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+<div class="glass"><h2>Product</h2></div>
+
+
+
 	</div>
 
 <!-- PHONE & TABLET END -->
 
 
-<footer class='black_bg'>
-	
+<footer class='black_bg pt-3 up_z'>
+	<div class='container'>
+		<div class='row'>
+
+			<div class='col-md logo'>
+				<a class="ps-4" href="#">
+			    	<img class='' src='static/img/logo_full.svg'>
+			    </a>
+			    <div class='ps-4 pt-4'>
+					<p class='white_milk details'>Have any ideas? Write us to info@skillunion.io</p>
+				</div>
+			</div>
+
+			<div class='col-md'>
+				
+			</div>
+
+			<div class='col-md'>
+				<div class='row'>
+					<div class='col-6'>
+		        		<a class="nav-link" aria-current="page" href="#">product</a>
+		        		<a class="nav-link" href="#">tariffs</a>
+		        		<a class="nav-link" href="#">calculator</a>
+					</div>
+					<div class='col-6'>
+						<a class="nav-link" href="#">about</a>
+		        		<a class="nav-link" href="#">team</a>
+		        		<a href="#"><img class='smm_link' src='static/img/app_button.svg'>
+		        		</a></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<center>
+			<a href='https://t.me/SkillUnionTradeBot'>
+				<img class='smm_link' src='static/icons/telegram.svg'>
+			</a>
+			<a href='https://www.instagram.com/skillunion_trade?igsh=dXIwcGhsZGoydm94'>
+				<img class='smm_link' src='static/icons/instagram.svg'>
+			</a>
+			<a href='https://medium.com/@skill_union_trade'>
+				<img class='smm_link' src='static/icons/medium.svg'>
+			</a>
+
+			
+		<p class='copyright pt-5 pb-2'>© 2024, Skill Union </p></center>
+	</div>
 </footer>
 
 
