--- a/main.html
+++ b/main.html
@@ -11,6 +11,8 @@
 
 	<link rel="stylesheet" href="static/css/main_style.css" type="text/css">
 	<link rel="stylesheet" href="static/css/circles.css" type="text/css">
+	<link rel="stylesheet" href="static/css/calculator.css" type="text/css">
+
 	<link rel="stylesheet" href="static/css/tabs.css" type="text/css">
 
 	
@@ -69,29 +71,101 @@
 
 
 
-		<section class ='black_bg'>
-			<div class='animation_here'>
-				<div class='ci_1_g_de'></div>
-				<div class='ci_1_y_de'></div>
-				<div class='ci_1_b_de'></div>
+	<section class ='black_bg'>
+		<div class='animation_here'>
+			<div class='ci_1_g_de'></div>
+			<div class='ci_1_y_de'></div>
+			<div class='ci_1_b_de'></div>
+		</div>
+	</section>
+	<section class ='green_bg'>
+		<div class="glass"><h2>Product</h2></div>
+	</section>
+
+	<section class ='black_bg up_z'>
+		<div class=' '>
+			<h2 class='white_milk py-5'>Tariffs</h2>
+
+			<div class="glass mb-5">
+
+
+				<div class='calc_body'>
+
+
+					<h4 class='calc_h4'>Deposit</h4>
+										  
+					<input type="text" class="only_int calc_input form-control" placeholder="ADD" aria-label="ADD">
+					<div class="d-flex justify-content-between">
+						<button class='calc_btn_sm btn_glass'><p>3.000</p></button>
+						<button class='calc_btn_sm btn_glass'><p>10.000</button>
+						<button class='calc_btn_sm btn_glass'><p>50.000</button>
+					</div>
+
+
+
+					<div class="d-flex justify-content-start">
+						<div><h4 class='calc_h4 mt-3'>APR</h4></div>
+						<div class='ps-5 py-3'>
+							<div class="form-check">
+							 	<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+							 	<label class="calc_details form-check-label" for="flexRadioDefault1">
+							    optimist
+							 	</label>
+							</div>
+							<div class="form-check">
+							 	<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+							 	<label class=" calc_details form-check-label" for="flexRadioDefault1">
+							    realist
+							 	</label>
+							</div>
+							<div class="form-check">
+							 	<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+							 	<label class="calc_details form-check-label" for="flexRadioDefault1">
+							    pessimist
+							 	</label>
+							</div>
+						</div>
+					</div>
+
+
+					<input type="text" class="only_int calc_input form-control" placeholder="MONTHS" aria-label="MONTHS">
+
+					<div class="d-flex justify-content-start pb-3">
+						<button class='calc_btn_sm btn_glass me-3'><p>1</p></button>
+						<button class='calc_btn_sm btn_glass me-3'><p>3</button>
+						<button class='calc_btn_sm btn_glass me-3'><p>6</button>
+						<button class='calc_btn_sm btn_glass'><p>12</button>
+					</div>
+
+
+					<h4 class='calc_h4'>Subscription  Plan</h4>
+
+					<div class="d-flex justify-content-around pb-3">
+						<div class='calc_details'>
+							monthly
+						</div>
+						<div class="form-check form-switch">
+						  <input class="form-check-input" type="checkbox" id="subscr_plan">
+						</div>
+						<div class='calc_details'>
+							annual 
+						</div>
+					</div>
+
+					<center>
+						<button id='show_result' class='calc_btn_result'>SHOW  RESULT</button>
+					</center>
+
 			</div>
-		</section>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-		<section class ='green_bg'>
-		</section>
 
-		<section class ='black_bg'>
-		</section>
+		</div>
+	</section>
 
-		<section class ='green_bg'>
-		</section>
+	<section class ='green_bg'>
+		<div class="glass"><h2>About</h2></div>
+		<div class="glass"><h2>Team</h2></div>
+		<div class="glass"><h2>Partners</h2></div>
+	</section>
 
 
 	</div>
@@ -162,14 +236,14 @@
 		</section>
 
 
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
-<div class="glass"><h2>Product</h2></div>
+	<div class="glass"><h2>Product</h2></div>
+	<div class="glass"><h2>Product</h2></div>
+	<div class="glass"><h2>Product</h2></div>
+	<div class="glass"><h2>Product</h2></div>
+	<div class="glass"><h2>Product</h2></div>
+	<div class="glass"><h2>Product</h2></div>
+	<div class="glass"><h2>Product</h2></div>
+	<div class="glass"><h2>Product</h2></div>
 
 
 
