--- a/main.html
+++ b/main.html
@@ -94,11 +94,11 @@
 
 					<h4 class='calc_h4'>Deposit</h4>
 										  
-					<input type="text" class="only_int calc_input form-control" placeholder="ADD" aria-label="ADD">
+					<input id='deposit' type="text" class="only_int calc_input form-control" placeholder="ADD" aria-label="ADD">
 					<div class="d-flex justify-content-between">
-						<button class='calc_btn_sm btn_glass'><p>3.000</p></button>
-						<button class='calc_btn_sm btn_glass'><p>10.000</button>
-						<button class='calc_btn_sm btn_glass'><p>50.000</button>
+						<button id='th3' class='calc_btn_sm btn_glass'><p>3.000</p></button>
+						<button id='th10' class='calc_btn_sm btn_glass'><p>10.000</button>
+						<button id='th50' class='calc_btn_sm btn_glass'><p>50.000</button>
 					</div>
 
 
@@ -107,21 +107,24 @@
 						<div>
 							<h4 class='calc_h4 mt-3'>APR</h4>
 						</div>
-						<div class='ps-5 py-3'>
-							<div class="form-check">
-							 	<input class="form-check-input" type="radio" name="flexRadioDefault" id="optimist">
+						<div class='ps-5 py-3 radio'>
+							<div class="form-check" value='320'>
+							 	<input class="radio form-check-input" type="radio" name="flexRadioDefault" id="optimist" value='320'>
+
 							 	<label class="calc_details form-check-label" for="optimist">
 							    optimist
 							 	</label>
 							</div>
-							<div class="form-check">
-							 	<input class="form-check-input" type="radio" name="flexRadioDefault" id="realist">
+							<div class="form-check" value='150'>
+							 	<input class="radio form-check-input" type="radio" name="flexRadioDefault" id="realist" value='150' checked>
+
 							 	<label class="calc_details form-check-label" for="realist">
 							    realist
 							 	</label>
 							</div>
-							<div class="form-check">
-							 	<input class="form-check-input" type="radio" name="flexRadioDefault" id="pessimist">
+							<div class="form-check"  value='80'>
+							 	<input class="radio form-check-input" type="radio" name="flexRadioDefault" id="pessimist" value='80'>
+							 	
 							 	<label class="calc_details form-check-label" for="pessimist">
 							    pessimist
 							 	</label>
@@ -130,12 +133,13 @@
 					</div>
 
 
-					<input type="text" class="only_int calc_input form-control" placeholder="MONTHS" aria-label="MONTHS">
+					<input id='mths' type="text" class="only_int calc_input form-control" placeholder="MONTHS" aria-label="MONTHS">
+					<div id='notion' class='calc_details'></div>
 					<div class="d-flex justify-content-start pb-3">
-						<button class='calc_btn_sm btn_glass me-3'><p>1</p></button>
-						<button class='calc_btn_sm btn_glass me-3'><p>3</button>
-						<button class='calc_btn_sm btn_glass me-3'><p>6</button>
-						<button class='calc_btn_sm btn_glass'><p>12</button>
+						<button id='m1' class='calc_btn_sm btn_glass me-3'><p>1</p></button>
+						<button id='m3' class='calc_btn_sm btn_glass me-3'><p>3</button>
+						<button id='m6' class='calc_btn_sm btn_glass me-3'><p>6</button>
+						<button id='m12' class='calc_btn_sm btn_glass'><p>12</button>
 					</div>
 
 
@@ -159,7 +163,7 @@
 								YOUR  PROFIT 
 							</div>
 							<div id='profit_result' class='' >
-								${the_profit}
+								Check
 							</div>
 						</div>
 
@@ -173,7 +177,7 @@
 					</div>
 
 					<center>
-						<button id='show_result' class='calc_btn_result'>SHOW  RESULT</button>
+						<button id='show_result' class='calc_btn_result' onClick='showResult(event);'>SHOW  RESULT</button>
 					</center>
 
 			</div>
@@ -322,7 +326,7 @@
 	</div>
 </footer>
 
-
+	<script src="static/js/calc.js"></script>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
