--- a/main.html
+++ b/main.html
@@ -95,6 +95,7 @@
 					<h4 class='calc_h4'>Deposit</h4>
 										  
 					<input id='deposit' type="text" class="only_int calc_input form-control" placeholder="ADD" aria-label="ADD">
+					<div id='notion_deposit' class='calc_details bordo'></div>
 					<div class="d-flex justify-content-between">
 						<button id='th3' class='calc_btn_sm btn_glass'><p>3.000</p></button>
 						<button id='th10' class='calc_btn_sm btn_glass'><p>10.000</button>
@@ -124,7 +125,7 @@
 							</div>
 							<div class="form-check"  value='80'>
 							 	<input class="radio form-check-input" type="radio" name="flexRadioDefault" id="pessimist" value='80'>
-							 	
+
 							 	<label class="calc_details form-check-label" for="pessimist">
 							    pessimist
 							 	</label>
@@ -134,7 +135,7 @@
 
 
 					<input id='mths' type="text" class="only_int calc_input form-control" placeholder="MONTHS" aria-label="MONTHS">
-					<div id='notion' class='calc_details'></div>
+					<div id='notion' class='calc_details bordo'></div>
 					<div class="d-flex justify-content-start pb-3">
 						<button id='m1' class='calc_btn_sm btn_glass me-3'><p>1</p></button>
 						<button id='m3' class='calc_btn_sm btn_glass me-3'><p>3</button>
@@ -149,7 +150,7 @@
 							monthly
 						</div>
 						<div class="form-check form-switch">
-						  <input class="form-check-input" type="checkbox" id="subscr_plan">
+						  <input class="form-check-input" type="checkbox" id="subscr_plan" checked>
 						</div>
 						<div class='calc_details'>
 							annual 
