refactored calc code

--- a/main.html
+++ b/main.html
@@ -149,7 +149,7 @@
 							monthly
 						</div>
 						<div class="form-check form-switch">
-						  <input class="form-check-input" type="checkbox" id="subscr_plan" checked>
+						  <input class="form-check-input" type="checkbox" id="subscr_plan" >
 						</div>
 						<div class='calc_details'>
 							annual 
