--- a/main.html
+++ b/main.html
@@ -6,15 +6,9 @@
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-
-
-
 	<link rel="stylesheet" href="static/css/main_style.css" type="text/css">
 	<link rel="stylesheet" href="static/css/circles.css" type="text/css">
 	<link rel="stylesheet" href="static/css/calculator.css" type="text/css">
-
-	<link rel="stylesheet" href="static/css/tabs.css" type="text/css">
-
 	
 	<title>
 	Skill Union
@@ -24,14 +18,14 @@
 
 
 
-<!-- DESCTOP START -->
+<!-- DESCTOP TOP START -->
 
-	<div class='d-none d-lg-block d-xl-block d-xxl-block'>
+<div class='d-none d-lg-block d-xl-block d-xxl-block'>
 
 
 	<header class="header black_bg up_z">
 
-		<div class="d-flex justify-content-around py-2">
+		<div class="d-flex justify-content-between p-2">
 
 			<div>
 			    <a class="navbar-brand" href="#">
@@ -70,24 +64,85 @@
 	</header>
 
 
-
 	<section class ='black_bg'>
 		<div class='animation_here'>
 			<div class='ci_1_g_de'></div>
 			<div class='ci_1_y_de'></div>
 			<div class='ci_1_b_de'></div>
 		</div>
-	</section>
+	</section> 
+</div>	
+<!-- DESCTOP TOP START -->
+
+<!-- PHONE & TABLET TOP START -->
+
+<div class='d-block d-lg-none'>
+
+	<nav class="navbar navbar-dark navbar-expand-lg black_bg up_z">
+		<div class="container-fluid">
+
+		    <a class="navbar-brand" href="#">
+		    	<img class='logo' src='static/img/logo_letters.svg'>
+		    </a>
+
+		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		      <span class="navbar-toggler-icon"></span>
+		    </button>
+
+
+		    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		      <div class="navbar-nav">
+		      	<div class="d-flex justify-content-around">
+		      		<ul>
+			        	<li>
+			        		<a class="nav-link" aria-current="page" href="#">product</a>
+			        	</li>
+			        	<li>
+			        		<a class="nav-link" href="#">tariffs</a>
+			        	</li>
+			        	<li>
+			        		<a class="nav-link" href="#">calculator</a>
+			        	</li>
+			        	<li>
+			        		<a class="nav-link" href="#">app</a>
+			        	</li>
+			        	<li>	
+			        		<a class="nav-link" href="#">about</a>
+			        	</li>
+			        	<li>
+			        		<a class="nav-link" href="#">team</a>
+			        	</li>
+			        	<li>
+				        	<a class="nav-link" href="#">partners</a>
+				        </li>
+			   		</ul>
+		        </div>
+		      </div>
+		    </div>
+		  </div>
+	</nav>
+	
+
+			<!-- <section class ='black_bg'>
+			<div class='animation_here'>
+				<div class='ci_1_g_mo'></div>
+				<div class='ci_1_y_mo'></div>
+				<div class='ci_1_b_mo'></div>				
+			</div>
+		</section> -->
+</div>
+<!-- PHONE & TABLET TOP END -->
+
+
 	<section class ='green_bg'>
 		<div class="glass"><h2>Product</h2></div>
 	</section>
 
 	<section class ='black_bg up_z'>
-		<div class=' '>
-			<h2 class='white_milk py-5'>Tariffs</h2>
+		<div class=''>
+			<h2 class='white_milk ps-5 py-4'>Tariffs</h2>
 
-			<div class="glass mb-5">
-
+			<!-- <div class="glass mb-5"></div> -->
 
 				<div class='calc_body'>
 
@@ -162,100 +217,15 @@
 						<button id='show_result' class='calc_btn_result' onClick='showResult(event);'>SHOW  RESULT</button>
 					</center>
 
-			</div>
-
-		</div>
+				</div>
 	</section>
 
-	<section class ='green_bg'>
+<!-- 	<section class ='green_bg'>
 		<div class="glass"><h2>About</h2></div>
 		<div class="glass"><h2>Team</h2></div>
 		<div class="glass"><h2>Partners</h2></div>
-	</section>
+	</section> -->
 
-
-	</div>
-
-<!-- DESCTOP END -->
-
-
-
-	
-<!-- PHONE & TABLET START -->
-
-	<div class='d-block d-lg-none'>
-
-
-	<nav class="navbar navbar-dark navbar-expand-lg black_bg up_z">
-		<div class="container-fluid">
-
-		    <a class="navbar-brand" href="#">
-		    	<img class='logo' src='static/img/logo_letters.svg'>
-		    </a>
-
-		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-		      <span class="navbar-toggler-icon"></span>
-		    </button>
-
-
-		    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-		      <div class="navbar-nav">
-		      	<div class="d-flex justify-content-around">
-		      		<ul>
-			        	<li>
-			        		<a class="nav-link" aria-current="page" href="#">product</a>
-			        	</li>
-			        	<li>
-			        		<a class="nav-link" href="#">tariffs</a>
-			        	</li>
-			        	<li>
-			        		<a class="nav-link" href="#">calculator</a>
-			        	</li>
-			        	<li>
-			        		<a class="nav-link" href="#">app</a>
-			        	</li>
-			        	<li>	
-			        		<a class="nav-link" href="#">about</a>
-			        	</li>
-			        	<li>
-			        		<a class="nav-link" href="#">team</a>
-			        	</li>
-			        	<li>
-				        	<a class="nav-link" href="#">partners</a>
-				        </li>
-			   		</ul>
-		        </div>
-		      </div>
-		    </div>
-		  </div>
-	</nav>
-
-
-		<section class ='black_bg'>
-			<div class='animation_here'>
-				<div class='ci_1_g_mo'></div>
-				<div class='ci_1_y_mo'></div>
-				<div class='ci_1_b_mo'></div>
-				
-				
-			</div>
-		</section>
-
-
-	<div class="glass"><h2>Product</h2></div>
-	<div class="glass"><h2>Product</h2></div>
-	<div class="glass"><h2>Product</h2></div>
-	<div class="glass"><h2>Product</h2></div>
-	<div class="glass"><h2>Product</h2></div>
-	<div class="glass"><h2>Product</h2></div>
-	<div class="glass"><h2>Product</h2></div>
-	<div class="glass"><h2>Product</h2></div>
-
-
-
-	</div>
-
-<!-- PHONE & TABLET END -->
 
 
 <footer class='black_bg pt-3 up_z'>
@@ -266,8 +236,8 @@
 				<a class="ps-4" href="#">
 			    	<img class='' src='static/img/logo_full.svg'>
 			    </a>
-			    <div class='ps-4 pt-4'>
-					<p class='white_milk details'>Have any ideas? Write us to info@skillunion.io</p>
+			    <div class='ps-4 pt-4   '>
+					<p class='white_milk details d-none d-lg-block d-xl-block d-xxl-block'>Have any ideas? Write us to info@skillunion.io</p>
 				</div>
 			</div>
 
@@ -285,7 +255,7 @@
 					<div class='col-6'>
 						<a class="nav-link" href="#">about</a>
 		        		<a class="nav-link" href="#">team</a>
-		        		<a href="#"><img class='smm_link' src='static/img/app_button.svg'>
+		        		<a href="#"><img class='app_button' src='static/img/app_button.svg'>
 		        		</a></div>
 					</div>
 				</div>
