--- a/main.html
+++ b/main.html
@@ -162,23 +162,23 @@
 						<div>
 							<h4 class='calc_h4 mt-3'>APR</h4>
 						</div>
-						<div class='ps-5 py-3 radio'>
+						<div class='ps-5 pt-3 radio'>
 							<div class="pb-2 form-check" value='320'>
-							 	<input class="radio form-check-input" type="radio" name="flexRadioDefault" id="optimist" value='320'>
+							 	<input class="radio form-check-input" type="radio" name="flexRadioDefault" id="optimist" value='3.2'>
 
 							 	<label class="ms-2 calc_details form-check-label" for="optimist">
 							    optimist
 							 	</label>
 							</div>
 							<div class="pb-2 form-check" value='150'>
-							 	<input class="radio form-check-input" type="radio" name="flexRadioDefault" id="realist" value='150' checked>
+							 	<input class="radio form-check-input" type="radio" name="flexRadioDefault" id="realist" value='1.5' checked>
 
 							 	<label class="ms-2 calc_details form-check-label" for="realist">
 							    realist
 							 	</label>
 							</div>
 							<div class="form-check"  value='80'>
-							 	<input class=" radio form-check-input" type="radio" name="flexRadioDefault" id="pessimist" value='80'>
+							 	<input class=" radio form-check-input" type="radio" name="flexRadioDefault" id="pessimist" value='0.8'>
 
 							 	<label class="ms-2 calc_details form-check-label" for="pessimist">
 							    pessimist
@@ -187,24 +187,23 @@
 						</div>
 					</div>
 
-
-					<input id='mths' type="text" class="only_int calc_input form-control" placeholder="MONTHS" aria-label="MONTHS">
+					<h4 class='calc_h4 pt-3'>Months</h4>
+					<input hidden id='mths' type="text" class="only_int calc_input form-control" placeholder="MONTHS" aria-label="MONTHS"> 
 					<div id='notion' class='calc_details bordo'></div>
-					<div class="d-flex justify-content-start pb-3">
-						<button id='m1' class='calc_btn_sm btn_glass me-3'><p>1</p></button>
-						<button id='m3' class='calc_btn_sm btn_glass me-3'><p>3</button>
-						<button id='m6' class='calc_btn_sm btn_glass me-3'><p>6</button>
-						<button id='m12' class='calc_btn_sm btn_glass'><p>12</button>
+					<div class="d-flex justiрfy-content-start pb-1">
+						<button id='m1' class='px-3 calc_btn_sm btn_glass me-3'><p>12</p></button>
+						<button id='m3' class='px-3 calc_btn_sm btn_glass me-3'><p>24</button>
+						<button id='m6' class='px-3 calc_btn_sm btn_glass me-3'><p>36</button>
 					</div>
 
 
-					<h4 class='calc_h4'>Subscription  Plan</h4>
+					<h4 class='calc_h4 pt-3'>Subscription  Plan</h4>
 					<div class="d-flex justify-content-around pb-3">
 						<div class='calc_details'>
 							monthly
 						</div>
 						<div class="form-check form-switch">
-						  <input class="form-check-input" type="checkbox" id="subscr_plan" >
+						  <input class="form-check-input" type="checkbox" id="subscr_plan" checked>
 						</div>
 						<div class='calc_details'>
 							annual 
